# kenna

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dedup-scoping-issue.md  engram-design.md  kenna-design.md
skill/: SKILL.md
src/: config.rs  main.rs
src/cli/: export.rs  list.rs  manage.rs  mod.rs  reconcile.rs  search.rs  serve.rs  settle.rs  show.rs  stats.rs
src/inference/: gpu_check.rs  llama.rs  mod.rs
src/mcp/: server.rs
src/pipeline/: curate.rs  discover.rs  extract.rs  mod.rs  preprocess.rs  reconcile.rs  settle.rs
src/storage/: cursor.rs  db.rs  mod.rs  models.rs  vector.rs
systemd/: engram-debounce.timer  engram-reconcile.service  engram-reconcile.timer  engram-settle.service  engram-settle.timer  engram-watch.path  install.sh  kenna-reconcile.service  kenna-reconcile.timer  kenna-settle.service  kenna-settle.timer
