[package]
name = "kenna"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
dirs = "6"
encoding_rs = "0.8"
llama-cpp-2 = { version = "0.1", features = ["sampler", "rocm"] }
# llama-cpp-sys-2 no longer needed — BERT embedding works via safe API on ROCm
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turso = "=0.4.3"
uuid = { version = "1", features = ["v4", "serde"] }
